<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.TelaLoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/wallpaper">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_box_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/meia_margem"
            android:background="@drawable/card_modelo"
            android:elevation="@dimen/card_elevation"
            android:padding="@dimen/meia_margem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emaillogin_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_comun_create"
                android:layout_marginTop="@dimen/margin_top_create"
                android:layout_marginEnd="@dimen/margin_comun_create"
                android:background="@drawable/cardcreate_model"
                android:hint="Email"
                app:boxBackgroundColor="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailLogin_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="text"
                    android:text="@string/email_user"
                    android:textAlignment="textStart"
                    android:textColor="@color/primaryColor"
                    android:textSize="@dimen/fonte_size_campos"
                    android:textStyle="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/senhaUser_login_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_comun_create"
                android:layout_marginTop="@dimen/margin_top_create"
                android:layout_marginEnd="@dimen/margin_comun_create"
                android:background="@drawable/cardcreate_model"
                android:hint="Password"
                app:boxBackgroundColor="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emaillogin_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/senhaUser_login_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:inputType="textPassword"
                    android:text="@string/text_senhaUser"
                    android:textAlignment="textStart"
                    android:textColor="@color/primaryColor"
                    android:textSize="@dimen/fonte_size_campos"
                    android:textStyle="normal" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox_Remember"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_margin="@dimen/meia_margem"
                android:padding="@dimen/meia_margem"
                android:text="@string/remember"
                app:layout_constraintEnd_toEndOf="@+id/senhaUser_login_layout"
                app:layout_constraintStart_toStartOf="@id/senhaUser_login_layout"
                app:layout_constraintTop_toBottomOf="@id/senhaUser_login_layout" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login"
                style="@style/button_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_comun_create"
                android:layout_marginTop="@dimen/margin_botton_login"
                android:layout_marginEnd="@dimen/margin_comun_create"
                android:background="@drawable/button_modelo"
                android:text="@string/login"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/checkbox_Remember" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_createACcount"
                style="@style/create_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_botton_login"
                android:layout_marginBottom="@dimen/margin_botton_login"
                android:text="@string/create_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_login" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>